overflow fix

--- a/client/src/app/main-page/main-page.component.scss
+++ b/client/src/app/main-page/main-page.component.scss
@@ -5,8 +5,9 @@
 }
 
 
-body {
-  overflow: hidden;
+:host {
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 main {
